--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,19 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test" : "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.10",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6"
+    "mocha": "^10.2.0",
+    "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
