--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "mocha": "^10.2.0",
+    "request": "^2.88.2",
+    "sinon": "^17.0.1",
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3"
   },
